fix: project design
