# handler/opportunity_delete.go
@@ -1,15 +1,15 @@
-package handlers
+package handler
 
 import (
 	"errors"
 	"fmt"
-	"net/http"
 	opportunityResponseDTO "github.com/GuilhermeVozniak/go-opportunities/dto/opportunity/responses"
-	validationHelpers "github.com/GuilhermeVozniak/go-opportunities/validationHelpers"
 	"github.com/GuilhermeVozniak/go-opportunities/schemas"
-	"github.com/GuilhermeVozniak/go-opportunities/utils"
+	"github.com/GuilhermeVozniak/go-opportunities/util"
+	"github.com/GuilhermeVozniak/go-opportunities/helper"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
+	"net/http"
 )
 
 // @BasePath /api/v1
@@ -21,9 +21,9 @@ import (
 // @Produce  json
 // @Param id path string true "Opportunity ID"
 // @Success 200 {object} dto.DeleteOpportunityResponse
-// @Failure 400 {object} utils.ErrorResponse
-// @Failure 404 {object} utils.ErrorResponse
-// @Failure 500 {object} utils.ErrorResponse
+// @Failure 400 {object} util.ErrorResponse
+// @Failure 404 {object} util.ErrorResponse
+// @Failure 500 {object} util.ErrorResponse
 // @Router /opportunity [delete]
 func DeleteOpportunityByIdHandler(ctx *gin.Context) {
 	var (
@@ -35,27 +35,27 @@ func DeleteOpportunityByIdHandler(ctx *gin.Context) {
 
 	// check for id
 	if id == "" {
-		utils.SendErrorResponseWithCode(ctx, http.StatusBadRequest, validationHelpers.ErrParamIsRequired("id", "string"))
+		util.SendErrorResponseWithCode(ctx, http.StatusBadRequest, helper.ErrParamIsRequired("id", "string"))
 		return
 	}
 
 	// check for opportunity
 	if err = db.First(&opportunity, id).Error; err != nil {
 		if err == gorm.ErrRecordNotFound {
-			utils.SendErrorResponseWithCode(ctx, http.StatusNotFound, errors.New(fmt.Sprintf("opportunity with id %s not found", id)))
+			util.SendErrorResponseWithCode(ctx, http.StatusNotFound, errors.New(fmt.Sprintf("opportunity with id %s not found", id)))
 		} else {
-			utils.SendErrorResponseWithCode(ctx, http.StatusInternalServerError, err)
+			util.SendErrorResponseWithCode(ctx, http.StatusInternalServerError, err)
 		}
 		return
 	}
 
 	// delete opportunity
 	if err = db.Delete(&opportunity).Error; err != nil {
-		utils.SendErrorResponseWithCode(ctx, http.StatusInternalServerError, err)
+		util.SendErrorResponseWithCode(ctx, http.StatusInternalServerError, err)
 		return
 	}
 
 	// convert model to dto
 	response = response.FromModelToResponse(&opportunity, "delete-opportunity")
-	utils.SendSuccessResponseWithCode(ctx, http.StatusOK, &response)
+	util.SendSuccessResponseWithCode(ctx, http.StatusOK, &response)
 }
